Fix Bug on iOS
Fix bug showing borders on lists on iOS

--- a/src/pages/vitals/vitals.scss
+++ b/src/pages/vitals/vitals.scss
@@ -8,6 +8,11 @@ page-vitals {
     }
   }
 
+  .list-ios > .item-block:first-child,
+  .list-ios > .item-block:last-child {
+    border: none;
+  }
+
   ion-list.vitals {
 
     ion-item {
